# finanace-data

./: .env  Cargo.toml  README.md  config.yml
.cargo/: config.toml
migrations/: 0001_stock.down.sql  0001_stock.sql
src/: main.rs
tool/: create_db.sh
