[package]
name = "finance-data"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.3", features = [
  "postgres",
  "runtime-tokio",
  "chrono",
  "macros",
  "uuid",
] }
sqlx-cli = "0.8.3"
tokio = { version = "1.44.1", features = ["full"] }
yahoo_finance_api = "3.0.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0.97"
